# switchtester

./: .gitattributes  .gitignore  CLAUDE.md  README.md  TESTING.md  atlantis-switch-matrix.csv  claude.md  pyproject.toml  switchtester-wiring.vsdx  wiring-as-2518-17-stern-m100-m200.md  wiring-bally-6803.md  wiring.md
deploy/: setup.sh  switchtester-web.service  teardown.sh
games/: atlantis.json  mata_hari.json  meteor.json
switchtester/: __init__.py  cli.py  tester.py  web.py
switchtester/templates/: base.html  diode.html  game.html  index.html  list.html  monitor.html  snapshot.html
